@@ -27,7 +27,8 @@ class CommandSetblock(mcpython.chat.command.Command.Command):
 
     @staticmethod
     def parse(values: list, modes: list, info):
-        G.world.dimensions[info.dimension].add_block(mcpython.util.math.normalize(values[0]), values[1])
+        position = mcpython.util.math.normalize(values[0])
+        G.world.dimensions[info.dimension].get_chunk_for_position(position).add_block(position, values[1])
 
     @staticmethod
     def get_help() -> list:
